--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pandas=1.2.4
-dash=1.20.0
-dash_core_components=1.16.0
-dash_html_components=1.1.3
-plotly=4.14.3
+pandas==1.2.4
+dash==1.20.0
+dash_core_components==1.16.0
+dash_html_components==1.1.3
+plotly==4.14.3
+flask==1.1.2
+gunicorn==20.1.0
